k8s/kafka-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\kompose\kompose-windows-amd64.exe -f docker-compose.yml convert
    kompose.version: 1.33.0 (3ce457399)
  labels:
    io.kompose.service: kafka
  name: kafka
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: kafka
  template:
    metadata:
      annotations:
        kompose.cmd: C:\kompose\kompose-windows-amd64.exe -f docker-compose.yml convert
        kompose.version: 1.33.0 (3ce457399)
      labels:
        io.kompose.network/play-with-fastapi-default: "true"
        io.kompose.service: kafka
    spec:
      enableServiceLinks: false
      containers:
        - env:
            - name: KAFKA_ADVERTISED_LISTENERS
              value: PLAINTEXT://kafka:9092
            - name: KAFKA_BROKER_ID
              value: "1"
            - name: KAFKA_ZOOKEEPER_CONNECT
              value: zookeeper:2181
            - name: KAFKA_LOG_DIRS
              value: /tmp/kafka-logs
            - name: KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR
              value: "1"
          resources:
            requests:
              memory: "512Mi"   # Request half a GB of memory
              cpu: "0.5"        # Request 0.5 CPU cores
            limits:
              memory: "1Gi"     # Limit memory usage to 1 GB
              cpu: "1"          # Limit CPU usage to 1 core

          image: confluentinc/cp-kafka:7.6.1
          livenessProbe:
            exec:
              command:
                - nc
                - -zv
                - kafka
                - "9092"
            failureThreshold: 3
            periodSeconds: 30
            timeoutSeconds: 10
          name: kafka
          ports:
            - containerPort: 9092
              protocol: TCP
      restartPolicy: Always
