k8s/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\kompose\kompose-windows-amd64.exe -f docker-compose.yml convert
    kompose.version: 1.33.0 (3ce457399)
  labels:
    io.kompose.service: worker
  name: worker
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: worker
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: C:\kompose\kompose-windows-amd64.exe -f docker-compose.yml convert
        kompose.version: 1.33.0 (3ce457399)
      labels:
        io.kompose.network/play-with-fastapi-default: "true"
        io.kompose.service: worker
    spec:
      containers:
        - env:
            - name: PYTHONPATH
              value: /app
            - name: POSTGRES_DB
              value: postgres
            - name: POSTGRES_HOST
              value: db
            - name: POSTGRES_PASSWORD
            - name: POSTGRES_PORT
              value: "5432"
            - name: POSTGRES_USER
              value: postgres
          image: osherkoren/kafka-worker:latest
          name: worker
          volumeMounts:
            - mountPath: /app/src
              name: worker-cm0
      restartPolicy: Always
      volumes:
        - configMap:
            name: worker-cm0
          name: worker-cm0
