k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\kompose\kompose-windows-amd64.exe -f docker-compose.yml convert
    kompose.version: 1.33.0 (3ce457399)
  labels:
    io.kompose.service: app
  name: app
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    io.kompose.service: app
