k8s/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\kompose\kompose-windows-amd64.exe -f docker-compose.yml convert
    kompose.version: 1.33.0 (3ce457399)
  labels:
    io.kompose.service: db
  name: db
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    io.kompose.service: db
