k8s/kafka-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\kompose\kompose-windows-amd64.exe -f docker-compose.yml convert
    kompose.version: 1.33.0 (3ce457399)
  labels:
    io.kompose.service: kafka
  name: kafka
spec:
  ports:
    - port: 9092
      targetPort: 9092
      protocol: TCP
  selector:
    io.kompose.service: kafka
