k8s/worker-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\kompose\kompose-windows-amd64.exe -f docker-compose.yml convert
    kompose.version: 1.33.0 (3ce457399)
  labels:
    io.kompose.service: worker
  name: worker
spec:
  ports:
    - port: 81
      targetPort: 81
  selector:
    io.kompose.service: worker
