k8s/zookeeper-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\kompose\kompose-windows-amd64.exe -f docker-compose.yml convert
    kompose.version: 1.33.0 (3ce457399)
  labels:
    io.kompose.service: zookeeper
  name: zookeeper
spec:
  ports:
    - port: 2181
      targetPort: 2181
      protocol: TCP
  selector:
    io.kompose.service: zookeeper
